shop-v2-chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend

spec:
  selector:
    app: backend

  ports:
  - port: 5001
    targetPort: 5001
